Revision history for Ocsinventory::Agent

       * Disabling Download.pm if agent running in local mode

2.0 rc1
       * Add download_start_handler to check if Net::SSLeay can be load and disable Download.pm if not
       * Add Net::SNMP optionnal dependency in README file.
       * Delete Win32 from backend
       * Various patches for 9.pm and If_Mib.pm to enhance ethernet ports speed display (François Mermet)
       * New SNMP modules for Juniper, Futjitsu and F5 vendors (François Mermet)
       * Fix Bug #682689 about missing data for disk when can't run lshal command (Bernhard Denner)
       * Add a warning message about user privacy in man page for --scan-homedirs option
       * Various patches for 8072.pm an If_Mib.pm (François Mermet)
       * Change timeout for Backend modules from 180 to 600 seconds
       * Change timeout for Backend modules from 180 to 600 seconds
       * Back on the ipdiscover binary from the old OCS Linux Agent to make network scans lighter than Nmap. Ipdiscover binary is only available under Linux systems
       * Use LaunchDaemons instead of LaunchAgents in MacOSX package
       * Fix SSL errors if no URL is given by the server in Snmp.pm
       * Do SNMP scans and treatments only if asked by the server
       * Delete some useless logs in debug for SNMP constructors and standard MIBs modules
       * Change oid_value in snmp_info subroutine in Printer_Mib.pm 
       * New SNMP 2620.pm module for Checkpoint Software Technologies constructor (François Mermet)
       * Add new "DEVICEPORT" and "DEVICETYPE" fields in addSnmpnetwork() in Common.pm
       * 311.pm and 8072.pm use setSnmpComputer() to set the type of SNMP device
       * Add a new addSnmpInput() subroutine in Common.pm
       * Fix a bug in addSnmpSwitch subroutine in Common.pm     
       * Replace SetSnmpSwitch() subroutine by SetSnmpSwitchInfos() in Common.pm
       * Set right fields for AddSnmpSwitch() subroutine in Common.pm