@@ -1,5 +1,6 @@
 Revision history for Ocsinventory::Agent
 
+       * Add a new addSnmpCPU() subroutine in Common.pm
        * Disabling Download.pm if agent running in local mode
 
 2.0 rc1
